--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
- <html lang = "en">
- <head>
-   <title></title>
- </head>
- <body>
-   <header>
-     <% include ./partials/_header %>
-   </header>
-   <h2>Shortened URLs</h2>
-   <ul>
-     <% for (key in urls) { %>
-         <li><%= key%>: <%= urls[key] %></li>
-     <% }; %>
-   </ul>
-   <a href="">Shorten URL!</a>
- </body>
- </html>
+<html lang = "en">
+  <head>
+    <title></title>
+  </head>
+  <body>
+    <% include ./partials/_header %>
+
+    <ul>
+      <% for (let shortUrl in urls) { %>
+        <li>
+          <% let longUrl = urls[shortUrl].longUrl %>
+          ShortURL: <a href="/u/<%= shortUrl %>"><%= shortUrl %></a> -
+          LongURL: <a href="<%= longUrl %>"><%= longUrl %></a>
+
+          <form method="POST" action="/urls/<%= shortUrl %>/delete">
+            <button type="submit" value="Delete">Delete</button>
+            <a href="/urls/<%= shortUrl %>">Edit</a>
+          </form>
+        </li>
+      <% } %>
+    </ul>
+    <a href="/urls/new">Shorten an URL!</a>
+  </body>
+</html>
