--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,3 +1,5 @@
-<header>
 <h1>Header</h1>
-</header>
+  <form method="POST" action="/login">
+    <input type="text" placeholder="username" name="username">
+    <input type="submit">
+  </form>
